--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -84,7 +84,7 @@ color:black;;
   
 $(".inputTd").each(function(){
  for (let i = 0; i < 8; i++) {
-    this.append(input);
+    this.append("<input>");
  }
 });
 
