--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -41,6 +41,9 @@ color:black;;
   #headerh1 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
+  td input {
+    padding:20px;
+  }
 </style>
 
   
@@ -66,7 +69,10 @@ color:black;;
         <td class="inputTd" id="blueTd"></td>
         <td class="inputTd" id="redTd"></td>
         <td class="inputTd" id="bsTd"></td>
-        <td class="inputTd" id="assTd"></td>
+        <td class="inputTd" id="assTd">
+          <input>
+          
+        </td>
 
       </tr>
     </table>
