--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -53,7 +53,7 @@ color:black;;
 <body>
 <div id="headerDiv">
   <h1 id="headerh1">Codenames Cluefinder</h1>
-  <h4>Not affiliated with Codenames or Vladimír Chvátil</h4>
+  <h4>Not affiliated with Codenames or Czech Games Edition</h4>
 </div>
   <div id="contentDiv">
     <table id="formTable">
