--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -42,7 +42,7 @@ color:black;;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
   td input {
-    padding:20px;
+    padding:8px;
   }
 </style>
 
@@ -53,7 +53,7 @@ color:black;;
 <body>
 <div id="headerDiv">
   <h1 id="headerh1">Codenames Cluefinder</h1>
-  <h4>Not affiliated with Codenames or Czech Games Edition</h4>
+  <h5>Not affiliated with Codenames or Czech Games Edition</h5>
 </div>
   <div id="contentDiv">
     <table id="formTable">
@@ -82,15 +82,31 @@ color:black;;
 <input type="checkbox" id="switch" />
 
 <button id="generate">Generate clues</button>
+
+
+<div class="outputcolumn">
+  <h2>2-word clues</h2>
+    <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+  <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+</div>
+
+
+
     
   </div>
 <script>
 
-  var input = $('<input>');
+  var inputt = $('input');
   
 $(".inputTd").each(function(){
  for (let i = 0; i < 8; i++) {
-    this.append("<input>");
+    this.append(inputt);
  }
 });
 
