--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -94,8 +94,43 @@ color:black;;
       <h4>"Conflict"</h4>
       <h5>Connects <i>war</i> and <i>fight</i></h5>
     </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
 </div>
 
+<div class="outputcolumn">
+  <h2>3-word clues</h2>
+    <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+  <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+   <div id="cluediv">
+      <h4>"Conflict"</h4>
+      <h5>Connects <i>war</i> and <i>fight</i></h5>
+    </div>
+</div>
 
 
     
