--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -7,10 +7,10 @@
     src: url(skyfall.ttf);
 }
   body {
-font-family:skyFall;
     margin-left:175px;
     margin-right:175px;
     background:#d5d5d5;
+    font-family: Century;
   }
 
   #headerDiv {
@@ -21,6 +21,8 @@ background: radial-gradient(circle, rgba(245,125,0,1) 0%, rgba(202,55,35,1) 47%,
     padding:20px;
     border-radius:12px;
     margin-bottom:25px;
+    font-family:skyFall !important;
+
   }
   #contentDiv {
 text-align:center;
