--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -143,7 +143,7 @@ color:black;;
   
 $(".inputTd").each(function(){
  for (let i = 0; i < 8; i++) {
-    this.append(inputt);
+    $(this).append(inputt);
  }
 });
 
