--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -81,8 +81,14 @@ color:black;;
 
 
 
-<input type="checkbox" id="switch" />
-
+<div>
+<div>
+  <p>Blue</p>
+</div>
+  <div>
+    <p>Red</p>
+  </div>
+</div>
 <button id="generate">Generate clues</button>
 
 
