--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -11,7 +11,7 @@
 <h2>FaceMusic solves this by identifying how happy or sad you are from a picture of your face -- no emotional intelligence required. From there, FaceMusic identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
 
 
-<h1 onclick="function(){generateCodeChallenge(64)}">Connect with spotify to get started.</h1>
+<h1 onclick="generateCodeChallenge(64)">Connect with spotify to get started.</h1>
 
 
 
