--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -34,6 +34,7 @@
 
     const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.get("code")) {
+        console.log("It has been detected that you needa login rn")
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
         getToken(code);
