--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -38,7 +38,8 @@
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
         getToken(code);
-        window.location.href = "https://www.jamesunderwood.net/facemusic";
+        console.log("uhhh hey");
+        //window.location.href = "https://www.jamesunderwood.net/facemusic";
 
     }
 
