--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -25,7 +25,7 @@
     const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
     const redirectUri = 'https://www.jamesunderwood.net/facemusic';
 
-    const scope = 'user-read-private user-read-email';
+    const scope = 'user-top-read';
     const authUrl = new URL("https://accounts.spotify.com/authorize")
 
 
