--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -37,10 +37,11 @@
         console.log("It has been detected that you needa login rn")
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
-        await getToken(code);
-        console.log("uhhh hey");
-        window.location.href = "https://www.jamesunderwood.net/facemusic";
-
+        console.log("uhhhsadf hey");
+        getToken(code).then((value) => {
+            console.log("uhhh hey");
+            window.location.href = "https://www.jamesunderwood.net/facemusic";
+        });
     }
 
 
