--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -58,7 +58,7 @@
 
 
 
-        const topArtistsPayload = {
+        let topArtistsPayload = {
             method: 'GET',
             headers: {
                 'Authorization': 'Bearer ' + accessToken
