--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-
-<h1>
+<div id="header">
+<h1 id="header">
     FaceMusic
 </h1>
+</div>
+<hr>
 
 <h2>We like to listen to music that matches our mood. But there's a problem with this: First, identifying how happy or sad you are requires a great deal of emotional intelligence. Second, even if you can do this, you can't possibly keep track of your msuci. </h2>
 <h2>FaceMusic solves this by identifying how happy or sad you are from a picture of your face -- no emotional intelligence required. From there, FaceMusic identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
