--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="index.css">
 </head>
-
+<body>
 <div id="header">
 <h1 id="header">
     FaceMusic
@@ -60,8 +60,8 @@
 
 
 
-    
-        console.log(getTopTracks(accessToken,0));
+        
+        var hi = getTopTracks(accessToken,0);
 
 
 
@@ -76,5 +76,5 @@
 
 
 </script>
-
+</body>
 </html>
