--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -61,8 +61,14 @@
 
 
         
-        var hi = getTopTracks(accessToken,0);
 
+
+        for (i = 0; i < 5; i++) {
+            let top = getTopTracks(accessToken,50*i);
+            
+
+
+        }
 
 
 
