--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -65,7 +65,7 @@
 
         for (i = 0; i < 5; i++) {
             let top = getTopTracks(accessToken,50*i);
-            
+            console.log(top);
 
 
         }
