--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -64,8 +64,12 @@
 
 
         for (i = 0; i < 5; i++) {
-            let top = getTopTracks(accessToken,50*i);
+            let top = getTopTracks(accessToken,49*i);
+            console.log("offset is" + 49*i)
             console.log(top);
+            top.foreach(function(val){
+                console.log(val);
+            })
 
 
         }
