--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -64,7 +64,7 @@
 
 
         for (i = 0; i < 5; i++) {
-            getTopTracks(accessToken,49*i).then((value){
+            getTopTracks(accessToken,49*i).then((value) => {
                 console.log(value);
 
 
