--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -61,7 +61,7 @@
 
 
         
-
+        tracksPool = [];
 
         for (i = 0; i < 5; i++) {
             getTopArtists(accessToken,50*i).then((value) => {
@@ -71,6 +71,7 @@
 
             getTopTracks(accessToken,50*i).then((value) => {
                 console.log(value);
+                tracks.push(value);
 
             });
          
