--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -71,7 +71,7 @@
 
             getTopTracks(accessToken,49*i).then((value) => {
                 console.log(value);
-                tracks.push(value);
+                tracksPool.push(value);
 
             });
          
