--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -81,7 +81,9 @@
 
             comSepList = "";
             
-            for (i=0; i<50; i++) {
+            for (i=0; i<25; i++) {
+                console.log(i);
+                console.log(tracksPool[i])
                 comSepList += "," + tracksPool[i].id;
             }
 
