--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -83,7 +83,7 @@
             
             for (i=0; i<25; i++) {
                 console.log(i);
-                console.log(tracksPool[i])
+                console.log(tracksPool[i]);
                 comSepList += "," + tracksPool[i].id;
             }
 
