--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -101,13 +101,15 @@
 
         
         comSepList = "";
-        for (i=0; i<49; i++) {
+        for (i=0; i<50; i++) {
               //  console.log(i);
                 //console.log(tracksPool[i]);
             comSepList += (i == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
         }
 
-        await getAudioFeatures(accessToken,comSepList)
+        audFeatures = await getAudioFeatures(accessToken,comSepList);
+
+        audFeatures.sort(compareSongs)
            
  
 
@@ -117,6 +119,16 @@
 
 
 
+
+    function compareSongs(a,b) {
+        if (a.valence > b.valence) {
+            return 1;
+        }
+        if (a.valence < b.valence) {
+            return -1;
+        }
+        return 0;
+    }
 
 
 
