--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -22,6 +22,9 @@
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
 
+
+<script src="face-api.min.js"></script>
+
 <script src="spotify_auth.js"></script>
 <script>
     const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
