--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -136,6 +136,14 @@
 
 
 
+    async function face() {
+        await faceapi.loadFaceExpressionModel('/models');
+    }
+    face();
+
+
+
+
 </script>
 </body>
 </html>
