--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -137,7 +137,7 @@
 
 
     async function face() {
-        await faceapi.loadFaceExpressionModel('/models');
+        await faceapi.loadFaceExpressionModel('/facemusic/models');
     }
     face();
 
