--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -142,7 +142,9 @@
     async function face() {
         const input = document.getElementById('myImg');
         await faceapi.loadFaceExpressionModel('/facemusic/models');
+        window.setTimeout(async function(){
         const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
+        },1000)
 
     }
     face();
