--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -141,9 +141,11 @@
 
     async function face() {
         const input = document.getElementById('myImg');
+        console.log("it's");
         await faceapi.loadFaceExpressionModel('/facemusic/models');
+        console.log("it is");
         window.setTimeout(async function(){
-        const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
+        //const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
         },5000)
 
     }
