--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -143,9 +143,10 @@
         const input = document.getElementById('myImg');
         console.log("it's");
         await faceapi.loadFaceExpressionModel('/facemusic/models');
+        await faceapi.nets.faceExpressionModel.loadFromWeightMap(weightMap);
         console.log("it is");
         window.setTimeout(async function(){
-        //const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
+            const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
         },5000)
 
     }
