--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -41,7 +41,7 @@
   
 
     const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get("code") && !localStorage.get("access_token")) {
+    if (urlParams.get("code") && !localStorage.getItem("access_token")) {
         console.log("It has been detected that you needa login rn")
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
