--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -36,7 +36,7 @@
 
 
     if (localStorage.getItem("access_token") == null) {
-        localStorage.clear();
+        //localStorage.clear();
     }
   
 
