--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -143,7 +143,7 @@
         const input = document.getElementById('myImg');
         console.log("it's");
         await faceapi.loadFaceExpressionModel('/facemusic/models');
-        await faceapi.loadSsdMobilenetv1Model('/models')
+        await faceapi.loadSsdMobilenetv1Model('/facemusic/models')
         console.log("it is");
         window.setTimeout(async function(){
             const detectionsWithExpressions = await faceapi.detectAllFaces(input).withFaceExpressions()
