--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -21,7 +21,7 @@
 
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
-<img id="myImg" src="moi.jpeg">
+<img id="myImg" src="sad.jpeg">
 
 
 <script src="face-api.min.js"></script>
