--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -11,7 +11,8 @@
 </div>
 <hr>
 
-<h2>We like to listen to music that matches our mood. But there's a problem with this: First, identifying how happy or sad you are requires a great deal of emotional intelligence. Second, even if you can do this, you can't possibly keep track of your msuci. </h2>
+<h2>We like to listen to music that matches our mood.</h2>
+<h2></h2>But there's a problem with this: Identifying how happy or sad you are requires a great deal of emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
 <h2>FaceMusic solves this by identifying how happy or sad you are from a picture of your face -- no emotional intelligence required. From there, FaceMusic identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
 
 
@@ -21,7 +22,7 @@
 
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
-<img id="myImg" src="sad.jpeg">
+<img id="myImg" src="sad.jpeg" width="100px">
 
 
 <script src="face-api.min.js"></script>
