--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -12,8 +12,21 @@
 <hr>
 
 <h2>We like to listen to music that matches our mood.</h2>
-<h2></h2>But there's a problem with this: Identifying how happy or sad you are requires a great deal of emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
-<h2>FaceMusic solves this by identifying how happy or sad you are from a picture of your face -- no emotional intelligence required. From there, FaceMusic identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
+<h2>But there's a problem with this: Identifying whether you are happy or sad requires too much emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
+<h2>FaceMusic solves this problem. First, it identifies how happy or sad you are from a picture of your face, no self-evaluation required. Then, it identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
+
+
+
+
+
+
+<h2 onclick="startVideo()">Get started</h2>
+<div id="videoContainer">
+<video autoplay="true" id="videoElement">
+	
+</video>
+</div>
+
 
 
 <h1 onclick="generateCodeChallenge(64)">Connect with spotify to get started.</h1>
@@ -28,6 +41,7 @@
 <script src="face-api.min.js"></script>
 
 <script src="spotify_auth.js"></script>
+<script src="webcam.js"></script>
 <script>
     const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
     const redirectUri = 'https://www.jamesunderwood.net/facemusic';
@@ -153,6 +167,16 @@
 
     }
     face();
+
+
+
+
+
+
+
+
+
+
 
     
 
