--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -20,12 +20,14 @@
 
 
 
-<h2 onclick="startVideo()">Get started</h2>
+<h2 onclick="startVideo()">Click to get started</h2>
+<h2>Give permission to webcam</h2>
 <div id="videoContainer">
 <video autoplay="true" id="videoElement">
 	
 </video>
 </div>
+<div id="snappic"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></div>
 
 
 
@@ -35,6 +37,7 @@
 
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
+<canvas id="canvas"> </canvas>
 <img id="myImg" src="sad.jpeg" width="100px">
 
 
