--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -12,15 +12,22 @@
 <hr>
 
 <h2>We like to listen to music that matches our mood.</h2>
-<h2>But there's a problem with this: Identifying whether you are happy or sad requires too much emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
+<h2>But there's a problem: Self-identifying whether you are happy or sad requires too much emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
 <h2>FaceMusic solves this problem. First, it identifies how happy or sad you are from a picture of your face, no self-evaluation required. Then, it identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
 
 
 
 
 
+<h2>
+<strong>To start: </strong> connect your Spotify.
+</h2>
+<button onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
 
-<h2 onclick="startVideo()">Click to get started</h2>
+<br>
+<br>
+<br>
+<button onclick="startVideo()">Next, enable webcamnessssss</button>
 <h2>Give permission to webcam</h2>
 <div id="videoContainer">
 <video autoplay="true" id="videoElement">
@@ -31,7 +38,6 @@
 
 
 
-<h1 onclick="generateCodeChallenge(64)">Connect with spotify to get started.</h1>
 
 
 
