--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -132,7 +132,7 @@
         
         tracksPoolWithValence = [];
 
-        for (j=0;j<tracksPool/50;j++) {
+        for (j=0;j<tracksPool.length/50;j++) {
 
             comSepList = "";
             for (i=j*50; i<50+j*50; i++) {
