--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -22,7 +22,7 @@
 <h2>
 <strong>To start: </strong> connect your Spotify.
 </h2>
-<button onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
+<button id="connectspot" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
 
 <br>
 <br>
@@ -34,7 +34,7 @@
 	
 </video>
 </div>
-<div id="snappic"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></div>
+<button id="snappic"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
 
 
 
@@ -120,8 +120,8 @@
 
             await getTopTracks(accessToken,49*i).then((value) => {
                 //console.log(value);
-                for (i=0;i<50;i++) {
-                    tracksPool.push(value[i]);
+                for (j=0;j<50;j++) {
+                    tracksPool.push(value[j]);
                 }
 
             });
