--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -137,9 +137,10 @@
         tracksPoolWithValence = [];
 
         for (j=0;j<tracksPool.length/50;j++) {
-
+            console.log("j is " + j);
             comSepList = "";
             for (i=j*50; i<50+j*50; i++) {
+                console.log("i is " + i);
                 //  console.log(i);
                     //console.log(tracksPool[i]);
                 comSepList += (i == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
