--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -143,7 +143,7 @@
                 console.log("i is " + i);
                 //  console.log(i);
                     //console.log(tracksPool[i]);
-                comSepList += (i == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
+                comSepList += (i%50 == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
             }
             console.log(comSepList);
             console.log("that was comSepList");
