--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -34,7 +34,7 @@
 	
 </video>
 </div>
-<button id="snappic"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
+<button id="snappic" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
 
 
 
@@ -193,6 +193,12 @@
     }
     face();
 
+
+
+    async function takepicParent() {
+        await takepicture();
+        face();
+    }
 
 
 
