--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -27,26 +27,29 @@
 <br>
 <br>
 <br>
-<button onclick="startVideo()">Next, enable webcamnessssss</button>
-<h2>Give permission to webcam</h2>
-<div id="videoContainer">
-<video autoplay="true" id="videoElement">
-	
-</video>
+
+<div id="step2">
+
+    <button onclick="startVideo()">Next, enable webcamnessssss</button>
+    <h2>Give permission to webcam</h2>
+    <div id="videoContainer">
+    <video autoplay="true" id="videoElement">
+        
+    </video>
+    </div>
+    <button id="snappic" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
+
+    <canvas id="canvas"> </canvas>
+    <p>You're looking pretty <span id="happiness"></span></p>
+
+    <img id="myImg" src="sad.jpeg" width="100px">
+
 </div>
-<button id="snappic" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
-
-<canvas id="canvas"> </canvas>
-<p>You're looking pretty <span id="happiness"></span></p>
-
-
-
 
 
 
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
-<img id="myImg" src="sad.jpeg" width="100px">
 
 
 <script src="face-api.min.js"></script>
@@ -67,7 +70,7 @@
   
 
     const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get("code") && !localStorage.getItem("access_token")) {
+    if (urlParams.get("code") && !localStorage.getItem("access_token")) { //Back from spotify
         console.log("It has been detected that you needa login rn")
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
@@ -76,22 +79,21 @@
             console.log("uhhh hey");
             window.location.href = "https://www.jamesunderwood.net/facemusic";
         });
-    }
-
-
-
-    if (urlParams.get("error")) {
+    } else if (urlParams.get("error")) {
         // say there was an error and remove url param
-    }
-    if (localStorage.getItem("access_token")) {
+    } else if (localStorage.getItem("access_token")) { //
 
 
-
+        document.getElementById("step2").style.visibility = "visible";
 
         let accessToken = localStorage.getItem("access_token");
         console.log("YOOO there is an acecss token and it is " + accessToken);
         
         getMusic(accessToken);
+
+
+    } else {
+
 
 
     }
