--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -194,6 +194,7 @@
         
         const detectionWithExpressions = await faceapi.detectSingleFace(input).withFaceExpressions();
         console.log(detectionWithExpressions);
+        console.log("Happy / sad : " + detectionWithExpressions.expressions.happy/detectionWithExpressions.expressions.sad);
         console.log(detectionWithExpressions.expressions.happy);
         hapsadneutSum = detectionWithExpressions.expressions.happy + 0.75*detectionWithExpressions.expressions.sad + 0.25*detectionWithExpressions.expressions.angry + detectionWithExpressions.expressions.neutral;
         happy = detectionWithExpressions.expressions.happy / hapsadneutSum;
