--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -32,7 +32,7 @@
 
 <div id="step2">
 
-    <button onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
+    <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
     <h2>Give permission to webcam</h2>
     <div id="videoContainer">
     <video autoplay="true" id="videoElement">
