--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -22,7 +22,7 @@
 <h2>
 <strong>To start: </strong> connect your Spotify.
 </h2>
-<button id="connectspotButton" class="roundButton" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
+<button id="connectspotButton" activeColor="#00ff00" class="roundButton" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
 </div>
 
 
