--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -202,10 +202,10 @@
         console.log(detectionWithExpressions.expressions.happy);
         hapsadneutSum = detectionWithExpressions.expressions.happy + detectionWithExpressions.expressions.sad + detectionWithExpressions.expressions.neutral;
         happy = detectionWithExpressions.expressions.happy / hapsadneutSum;
-        happy = (happy*0.75)+(1/12)
+       // happy = (happy*0.75)+(1/12)
         // sad = detectionWithExpressions.expressions.sad / hapsadneutSum;
         neutral = detectionWithExpressions.expressions.neutral / hapsadneutSum;
-        neutral = (neutral*0.75)+(1/12)
+        //neutral = (neutral*0.75)+(1/12)
         document.getElementById("happiness").innerText = happy + 0.4*neutral;
 
     }
