--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -42,7 +42,7 @@
         <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
 
         <canvas id="canvas"> </canvas>
-        <p>You're looking pretty <span id="happiness"></span></p>
+        <p>You're looking  <span id="happiness"></span></p>
 
         <img id="myImg" src="sad.jpeg" width="100px">
 
@@ -195,7 +195,22 @@
             constant = (happy/(happy+sad)-0.5)/6
         }
 
-        document.getElementById("happiness").innerText = happy + 0.5*neutral + constant;
+        happinessCalced = happy + 0.5*neutral + constant;
+        happinessCalcedWord = "";
+        if (happinessCalced<0.2) {
+            happinessCalcedWord = "very sad";
+        } else if (happinessCalced<0.4) {
+            happinessCalcedWord = "sad";
+        } else if (happinessCalced<0.6) {
+            happinessCalcedWord = "pretty neutral";
+        } else if (happinessCalced<0.8) {
+            happinessCalcedWord = "happy";
+        } else {
+            happinessCalcedWord = "very happy";
+        }
+
+
+        document.getElementById("happiness").innerText = happinessCalcedWord
 
     }
    // face();
