--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -210,7 +210,7 @@
         }
 
 
-        document.getElementById("happiness").innerText = happinessCalcedWord
+        document.getElementById("happiness").innerText = happinessCalcedWord + " " + happinessCalced;
 
     }
    // face();
