--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -34,14 +34,14 @@
 
     <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
     <div id="step2point1">
-        <div id="videoContainer">
-        <video autoplay="true" id="videoElement">
-            
-        </video>
+        <div id="videoPlusSnapButton">
+            <div id="videoContainer">
+                <video autoplay="true" id="videoElement">
+                </video>
+            </div>
+            <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
         </div>
-        <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
-
-        <canvas id="canvas"> </canvas>
+        <canvas id="canvas"></canvas>
         <p>You're looking  <span id="happiness"></span></p>
 
         <img id="myImg" src="sad.jpeg" width="100px">
