--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -9,11 +9,36 @@
     FaceMusic
 </h1>
 </div>
-<hr>
 
 
 <div id="intro">
-    
+    <div class="introTextDiv" style="margin-top:30vh;">
+        <h1>We like to listen to music that matches our mood.</h1>
+    </div>
+    <div class="introTextDiv" style="margin-top:100vh;">
+        <h1>But there's a problem:</h1>
+    </div>
+    <div class="introTextDiv" style="margin-top:5vh;">
+        <h1>Self-identifying whether you are happy or sad requires too much emotional intelligence.</h1>
+    </div>
+
+    <div class="introTextDiv" style="margin-top:5vh;">
+        <h1>Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h1>
+    </div>
+
+    <div class="introTextDiv" style="margin-top:50vh;">
+        <h1>FaceMusic solves this problem.</h1>
+    </div>
+
+    <div class="introTextDiv" style="margin-top:5vh;">
+        <h1>First, it identifies how happy or sad you are from a picture of your face, no self-evaluation required.</h1>
+    </div>
+
+    <div class="introTextDiv" style="margin-top:5vh;margin-bottom:30vh;">
+        <h1>Then, it identifies your favorite songs and makes a playlist of those songs that best match your mood.</h1>
+    </div>
+
+
 </div>
 
 
