--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -19,11 +19,12 @@
         <h1>But there's a problem:</h1>
     </div>
     <div class="introTextDiv" style="margin-top:5vh;">
-        <h1>Self-identifying whether you are happy or sad requires too much emotional intelligence.</h1>
+        <h1>It's hard to remember all the songs you like, and how they sound.</h1>
     </div>
 
     <div class="introTextDiv" style="margin-top:5vh;">
-        <h1>Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h1>
+        <h1>Plus, self-identifying whether you are happy or sad requires too much emotional intelligence.</h1>
+
     </div>
 
     <div class="introTextDiv" style="margin-top:50vh;">
@@ -31,11 +32,11 @@
     </div>
 
     <div class="introTextDiv" style="margin-top:5vh;">
-        <h1>First, it identifies how happy or sad you are from a picture of your face, no self-evaluation required.</h1>
+        <h1>First, we take a picture of your face.</h1>
     </div>
 
     <div class="introTextDiv" style="margin-top:5vh;margin-bottom:30vh;">
-        <h1>Then, it identifies your favorite songs and makes a playlist of those songs that best match your mood.</h1>
+        <h1>Then, based on songs and artists you like, we'll make a playlist that best matches your detected mood.</h1>
     </div>
 
 
@@ -43,43 +44,41 @@
 
 
 
-<h2>We like to listen to music that matches our mood.</h2>
-<h2>But there's a problem: Self-identifying whether you are happy or sad requires too much emotional intelligence. Plus, it's hard to remember all the songs you like, and whether they're happy or sad.</h2>
-<h2>FaceMusic solves this problem. First, it identifies how happy or sad you are from a picture of your face, no self-evaluation required. Then, it identifies your favorite songs and makes a playlist of those songs that best match your mood.</h2>
+
+<div id="postIntro">
 
 
+    <div id="step1">
+    <h2>
+    <strong>To start: </strong> connect your Spotify.
+    </h2>
+    <button id="connectspotButton" activeColor="#00ff00" class="roundButton" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
+    </div>
 
 
-<div id="step1">
-<h2>
-<strong>To start: </strong> connect your Spotify.
-</h2>
-<button id="connectspotButton" activeColor="#00ff00" class="roundButton" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
-</div>
+    <br>
+    <br>
+    <br>
 
+    <div id="step2">
 
-<br>
-<br>
-<br>
-
-<div id="step2">
-
-    <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
-    <div id="step2point1">
-        <div id="videoPlusSnapButton">
-            <div id="videoContainer">
-                <video autoplay="true" id="videoElement">
-                </video>
+        <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
+        <div id="step2point1">
+            <div id="videoPlusSnapButton">
+                <div id="videoContainer">
+                    <video autoplay="true" id="videoElement">
+                    </video>
+                </div>
+                <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
             </div>
-            <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
+            <canvas id="canvas"></canvas>
+            <p>You're looking  <span id="happiness"></span></p>
+
+            <img id="myImg" src="sad.jpeg" width="100px">
+
         </div>
-        <canvas id="canvas"></canvas>
-        <p>You're looking  <span id="happiness"></span></p>
-
-        <img id="myImg" src="sad.jpeg" width="100px">
-
     </div>
-</div>
+    </div>
 
 
 
