--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -49,16 +49,13 @@
 
 
     <div id="step1">
-    <h2>
+    <!--<h2>
     <strong>To start: </strong> connect your Spotify.
-    </h2>
+    </h2>-->
     <button id="connectspotButton" activeColor="#00ff00" class="roundButton" onclick="generateCodeChallenge(64)">Connect with Spotify to get started</button>
     </div>
 
 
-    <br>
-    <br>
-    <br>
 
     <div id="step2">
 
@@ -182,7 +179,7 @@
         }
 
 
-        tracksPoolWithValence.sort(compareSongs)
+        //tracksPoolWithValence.sort(compareSongs)
            
  
 
@@ -194,10 +191,10 @@
 
 
     function compareSongs(a,b) {
-        if (a.valence > b.valence) {
+        if (Math.abs(a.valence-happinessCalcedWord) > Math.abs(b.valence-happinessCalcedWord)) {
             return 1;
         }
-        if (a.valence < b.valence) {
+        if (Math.abs(a.valence-happinessCalcedWord) < Math.abs(b.valence-happinessCalcedWord)) {
             return -1;
         }
         return 0;
@@ -234,7 +231,7 @@
             happinessCalcedWord = "fairly sad";
         } else if (happinessCalced<0.48) {
             happinessCalcedWord = "slightly sad";
-        } else if (happinessCalced<0.583) {
+        } else if (happinessCalced<0.59) {
             happinessCalcedWord = "pretty neutral";
         } else if (happinessCalced<0.65) {
             happinessCalcedWord = "slightly happy";
