--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -191,6 +191,9 @@
 
 
     function compareSongs(a,b) {
+        console.log("hey this is compare songs with a and b as respectively ");
+        console.log(a);
+        console.log(b);
         if (Math.abs(a.valence-happinessCalcedWord) > Math.abs(b.valence-happinessCalcedWord)) {
             return 1;
         }
