--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -59,7 +59,7 @@
 
     <div id="step2">
 
-        <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcamnessssss</button>
+        <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcam</button>
         <div id="step2point1">
             <div id="videoPlusSnapButton">
                 <div id="videoContainer">
