--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -195,10 +195,10 @@
         console.log(a);
         console.log(b);
         console.log(happinessCalcedWord);
-        if (Math.abs(a.valence-happinessCalcedWord) > Math.abs(b.valence-happinessCalcedWord)) {
+        if (Math.abs(a.valence-happinessCalced) > Math.abs(b.valence-happinessCalced)) {
             return 1;
         }
-        if (Math.abs(a.valence-happinessCalcedWord) < Math.abs(b.valence-happinessCalcedWord)) {
+        if (Math.abs(a.valence-happinessCalced) < Math.abs(b.valence-happinessCalced)) {
             return -1;
         }
         return 0;
